--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-apply plugin: 'org.greenrobot.greendao'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.lemnik.claim"
@@ -32,20 +31,23 @@ android {
     }
 }
 
-greendao {
-    schemaVersion 1000
-}
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
-    compile 'com.android.support:design:25.3.1'
-    implementation 'com.android.support:cardview-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.android.support:design:26.0.0'
+    implementation 'com.android.support:cardview-v7:26.0.0'
+    implementation 'com.android.support:support-v4:26.0.0'
+    implementation 'com.android.support:animated-vector-drawable:26.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:25.4.0'
+
+    implementation 'android.arch.lifecycle:runtime:1.0.0-alpha8'
+    implementation 'android.arch.lifecycle:extensions:1.0.0-alpha8'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha8'
+
+    implementation 'android.arch.persistence.room:runtime:1.0.0-alpha8'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha8'
 }
