Chapter 8 - Added swipe-to-delete behaviour with elevation feedback

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
             android:name=".CaptureClaimActivity"
             android:label="@string/title_activity_capture_claim"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".OverviewActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
