--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.0.0'
     implementation 'com.android.support:support-v4:26.0.0'
     implementation 'com.android.support:animated-vector-drawable:26.0.0'
+    implementation 'com.android.support:gridlayout-v7:26.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     implementation 'android.arch.lifecycle:runtime:1.0.0-alpha8'
