--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,18 +37,18 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:26.0.0'
-    implementation 'com.android.support:design:26.0.0'
-    implementation 'com.android.support:cardview-v7:26.0.0'
-    implementation 'com.android.support:support-v4:26.0.0'
-    implementation 'com.android.support:animated-vector-drawable:26.0.0'
-    implementation 'com.android.support:gridlayout-v7:26.0.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:animated-vector-drawable:26.1.0'
+    implementation 'com.android.support:gridlayout-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    implementation 'android.arch.lifecycle:runtime:1.0.0-alpha8'
-    implementation 'android.arch.lifecycle:extensions:1.0.0-alpha8'
-    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha8'
+    implementation 'android.arch.lifecycle:runtime:1.0.0'
+    implementation 'android.arch.lifecycle:extensions:1.0.0-alpha9-1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha9-1'
 
-    implementation 'android.arch.persistence.room:runtime:1.0.0-alpha8'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha8'
+    implementation 'android.arch.persistence.room:runtime:1.0.0-alpha9-1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha9-1'
 }
