--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.lemnik.claim"
         minSdkVersion 16
@@ -44,11 +44,10 @@ dependencies {
     implementation 'com.android.support:animated-vector-drawable:26.1.0'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
     implementation 'android.arch.lifecycle:runtime:1.0.0'
     implementation 'android.arch.lifecycle:extensions:1.0.0-alpha9-1'
     annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha9-1'
-
     implementation 'android.arch.persistence.room:runtime:1.0.0-alpha9-1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha9-1'
+    implementation 'com.android.support:palette-v7:+'
 }
